# safa

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: cache_e0.yaml  cache_e0_val.yaml  cache_e0_val_single_face.yaml  eval.yaml  eval_g_v2_best_single_face_recheck.yaml  eval_stability_balanced_debug_monitor10_rawbest_fixed16_single_face.yaml  paths.yaml  smoke.yaml  train_e0.yaml  train_g.yaml  train_g_v2.yaml  train_g_v2_best.yaml  train_g_v2_best_stage1.yaml  train_g_v3.yaml
docs/: 4029_runbook.md  PHASE_SUMMARY.md  PHASE_SUMMARY_V2_BEST.md  experiment_report.md  medium_v2_m2_followup_plan.md
reports/: minimal_validation.md
scripts/: build_balanced_index.py  eval_generation_quality.py  export_privacy_recognizers.py  filter_single_face_index.py  guarded_run.py  monitor_medium_v1_stage2.py  monitor_medium_v2_m2.py  plot_m2_m3_curves.py  plot_medium_v1_curves.py  repair_affectnet_missing_row.py  run_ablation_a.sh  run_ablation_b.sh  run_ablation_c.sh  run_ablation_d.sh  run_ablation_e.sh  run_ablation_f.sh  run_cache_e0.sh  run_cache_e0_val.sh  run_eval.sh  run_smoke_tmux.sh  run_train_e0_tmux.sh  run_train_g_tmux.sh  run_train_g_v2.sh  run_train_g_v3.sh  step_count_diagnostic.py  supervise_medium_v1_stage2.py  supervise_medium_v2_stages.py  visualize_epoch_quality_pairs.py  visualize_eval_pairs.py  visualize_multi.py  visualize_results.py  watch_medium_v2_checkpoint_visuals.py  watch_medium_v2_epoch_visuals.py
tests/: test_build_balanced_index.py  test_dataset_smoke.py  test_ddp_contract.py  test_distributed_utils.py  test_e0_contract.py  (+25 more)
(+87 files in other folders)
