[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safa"
version = "0.1.0"
description = "Minimal validation for samplewise affective face anonymization"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "torch>=2.1",
  "torchvision>=0.16",
  "tqdm>=4.66",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
privacy = ["insightface>=0.7.3", "onnxruntime-gpu>=1.16"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

