[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safa"
version = "0.1.0"
description = "Minimal validation for samplewise affective face anonymization"
requires-python = ">=3.10"
dependencies = [
  "numpy==1.26.4",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "torch>=2.1",
  "torchvision>=0.16",
  "tqdm>=4.66",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
privacy = [
  "insightface>=0.7.3",
  "onnxruntime-gpu>=1.16",
  "opencv-python-headless==4.10.0.84",
  "scikit-image==0.26.0",
  "tifffile==2024.8.30",
]
export = [
  "transformers==4.44.2",
  "huggingface_hub<1.0",
  "safetensors",
  "omegaconf",
  "fvcore",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
